--- a/server/package.json
+++ b/server/package.json
@@ -4,23 +4,30 @@
   "description": "",
   "main": "build/app.js",
   "scripts": {
+    "lint": "eslint . --ext .ts",
+    "lint.fix": "eslint . --ext .ts —-fix",
     "prebuild": "tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node .",
+    "start": "nodemon node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
     "express": "^4.18.0",
+    "nodemon": "^2.0.16",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "eslint": "^8.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "^8.15.0",
     "tslint": "^6.1.3"
   }
 }
