--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1",
     "typeface-roboto": "^1.1.13",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^18.0.4",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/parser": "^5.25.0",
     "typescript": "^4.6.4"
   }
