--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "express": "^4.18.0",
+    "knex": "^2.3.0",
     "nodemon": "^2.0.16",
+    "pg": "^8.8.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   },
