--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.34",
+    "dotenv": "^16.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1",
@@ -31,6 +32,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://server:5000",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -49,5 +51,10 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/parser": "^5.25.0",
     "typescript": "^4.6.4"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
