--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "lint": "eslint . --ext .ts",
     "lint.fix": "eslint . --ext .ts —-fix",
-    "prebuild": "tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "nodemon node .",
+    "start": "nodemon node app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,6 +17,7 @@
     "@types/express": "^4.17.13",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
@@ -29,6 +29,7 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
