--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: todo_list
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
   server:
     build:
@@ -43,4 +45,7 @@ services:
       - server
     links:
       - server
+
+volumes:
+ postgres-data:
 
