--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "nodemon node app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-mocha -p ./tsconfig.json test/**/*.spec.ts"
   },
   "author": "",
   "license": "ISC",
@@ -29,10 +29,19 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.3",
     "@types/cors": "^2.8.12",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^10.0.0",
+    "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "chai": "^4.3.6",
     "eslint": "^8.15.0",
+    "faker": "^6.6.6",
+    "mocha": "^10.0.0",
+    "sinon": "^14.0.1",
+    "ts-mocha": "^10.0.0",
     "tslint": "^6.1.3"
   }
 }
