--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "mocha": "^10.0.0",
     "sinon": "^14.0.1",
     "ts-mocha": "^10.0.0",
+    "ts-sinon": "^2.0.2",
     "tslint": "^6.1.3"
   }
 }
