--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "@types/cors": "^2.8.12",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^10.0.0",
+    "@types/mock-req-res": "^1.1.3",
     "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
@@ -40,6 +41,7 @@
     "eslint": "^8.15.0",
     "faker": "^6.6.6",
     "mocha": "^10.0.0",
+    "mock-req-res": "^1.2.1",
     "sinon": "^14.0.1",
     "ts-mocha": "^10.0.0",
     "ts-sinon": "^2.0.2",
